# ebcc-rs

./: .gitmodules  Cargo.toml  README.md  crates.js  help.html  index.html  settings.html  src-files.js
.github/workflows/: ci.yml
ebcc/: all.html  constant.EBCC_NDIMS.html  enum.EBCCCompatChunkShape.html  enum.EBCCError.html  enum.EBCCResidualType.html  enum.ResidualType.html  fn.ebcc_decode.html  fn.ebcc_decode_chunking_into.html  fn.ebcc_decode_into.html  fn.ebcc_encode.html  fn.ebcc_encode_chunking.html  fn.ebcc_encode_chunking_compat.html  index.html  sidebar-items.js  struct.EBCCConfig.html  type.EBCCChunkShape.html  type.EBCCResult.html  type.EbccDim.html
ebcc-sys/: Cargo.toml  README.md  build.rs
ebcc-sys/src/: lib.rs
ebcc/codec/: constant.EBCC_NDIMS.html  enum.EBCCCompatChunkShape.html  fn.ebcc_decode.html  fn.ebcc_decode_chunking_into.html  fn.ebcc_decode_into.html  fn.ebcc_encode.html  fn.ebcc_encode_chunking.html  fn.ebcc_encode_chunking_compat.html  type.EBCCChunkShape.html  type.EbccDim.html
ebcc/config/: enum.EBCCResidualType.html  enum.ResidualType.html  struct.EBCCConfig.html
ebcc/error/: enum.EBCCError.html  type.EBCCResult.html
ebcc_sys/: all.html  constant.EBCC_CHUNKING_HEADER_MAGIC.html  constant.EBCC_CHUNKING_HEADER_VERSION.html  constant.EBCC_MAX_INTERNAL_IMAGE_DIM.html  constant.EBCC_MIN_INTERNAL_IMAGE_DIM.html  constant.EBCC_NDIMS.html  fn.ebcc_decode.html  fn.ebcc_decode_chunking.html  fn.ebcc_encode.html  fn.ebcc_encode_chunking.html  fn.ebcc_encode_chunking_compat.html  fn.free_buffer.html  index.html  sidebar-items.js  struct.codec_config_t.html
ebcc_sys/bindings/: fn.ebcc_decode.html  fn.ebcc_decode_chunking.html  fn.ebcc_encode.html  fn.ebcc_encode_chunking.html  fn.ebcc_encode_chunking_compat.html  fn.free_buffer.html  struct.codec_config_t.html
ebcc_sys/bindings/residual_t/: constant.MAX_ERROR.html  constant.NONE.html  constant.RELATIVE_ERROR.html  index.html  type.Type.html
ebcc_sys/residual_t/: constant.MAX_ERROR.html  constant.NONE.html  constant.RELATIVE_ERROR.html  index.html  sidebar-items.js  type.Type.html
examples/: basic_compression.rs
qpet-sperr-sys/: build.rs
search.index/: 01172c6aef06.js  023477574b9e.js  03ef7e1b603e.js  08af51ed8f.js  0d4d2b25de59.js  12325681ab.js  164efaf55a36.js  1911d662edc5.js  1a0880ebf7.js  1ad07885f2de.js  2280198424.js  24b4829324b8.js  251843f6b9.js  2c0b4051a2.js  2cb57e7f43.js  2d777e3db4d6.js  2d7eb5704c.js  30f30e798f.js  34a9f43bbe62.js  35d253d2db.js  3727c8d72d26.js  3adf7cd16c57.js  40a3f8931b.js  476e517589ae.js  48be1aa395.js  4c6df3c008.js  4facfd3246.js  54cbecde6e.js  54ffe89ab738.js  55c8f7ef3720.js  57e8faf555.js  5e44087a5f9e.js  62922489c8.js  69e70b8d9f18.js  6ac8fa87e15d.js  7eac9167fd0a.js  root.js
search.index/crateNames/: 8fe09ab50b89.js
search.index/desc/: 468863bdc0c7.js  97bcfd4085ea.js  b77d110442.js  ec0ccbb46c.js  ff3329da41b7.js
search.index/entry/: 01f7072807b7.js  217b4e2bc5.js  22c1d4ab75db.js  a41294087a11.js  a9d3bc43cd.js
search.index/function/: 1943297be256.js  47b4ae762faa.js  a3ab247ecf.js  b053436503.js  f2d8dd6a70cb.js
search.index/generic_inverted_index/: 90c4179a36.js  e9243753aae0.js  fa47f4f3e4.js
search.index/name/: 2c54d7689b65.js  6f0cde8f74.js  8d9c54529a09.js  da23286d6e.js  f809727aedc1.js
search.index/normalizedName/: 50bbbe6d9601.js  616e6e625edd.js  8bef9dc18c.js  9cc93e5864.js  c78b05c59f94.js
search.index/path/: 58b66f76b1.js  598eafedff3c.js  b4bccd02eb70.js  b600f79bd5a0.js
search.index/type/: 3a1526d147a6.js  3fe69b132b.js  758f9e749cce.js  9c2d3db82b.js  d3d7401f2897.js
sperr-sys/: Cargo.toml  build.rs  wrapper.hpp
src/: codec.rs  config.rs  error.rs  lib.rs
src/ebcc/: codec.rs.html  config.rs.html  error.rs.html  lib.rs.html
src/ebcc_sys/: lib.rs.html
tests/: integration.rs
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.Eq.js  trait.PartialEq.js
trait.impl/core/default/: trait.Default.js
trait.impl/core/error/: trait.Error.js
trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
trait.impl/core/hash/: trait.Hash.js
trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js  trait.UnsafeUnpin.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
type.impl/core/ffi/primitives/: type.c_uint.js
type.impl/core/result/: enum.Result.js
type.impl/ndarray/dimension/dim/: struct.Dim.js
type.impl/std/: primitive.array.js
