[package]
name = "ebcc-sys"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

description = "Low-level Rust bindings to the EBCC compressor"
readme = "README.md"
categories = ["api-bindings", "compression", "encoding"]
keywords = ["EBCC", "bindgen", "compression", "encoding"]

links = "ebcc"

exclude = [
    "/EBCC/.github", "/EBCC/data", "/EBCC/ebcc", "/EBCC/examples",
    "/EBCC/tests", "/EBCC/pyproject.toml", "/EBCC/pytest.ini",
    "/EBCC/setup.py",
]

[build-dependencies]
bindgen = { workspace = true, features = ["runtime"] }
cmake = { workspace = true }

[lints]
workspace = true
