[package]
name = "sperr-sys"
version = "0.2.0"
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

description = "Low-level Rust bindings to the SPERR compressor"
readme = "README.md"
categories = ["api-bindings", "compression", "encoding"]
keywords = ["SPERR", "bindgen", "compression", "encoding"]

# TODO: rename and readd
# links = "SPERR"

exclude = ["/SPERR/.github", "/SPERR/docker", "/SPERR/evaluations", "/SPERR/examples", "/SPERR/handout", "/SPERR/test_data", "/SPERR/test_scripts", "/SPERR/utilities"]

[features]
openmp = ["dep:openmp-sys"]

[dependencies]
openmp-sys = { workspace = true, optional = true }
zstd-sys = { version = "2.0.10", default-features = false }

[build-dependencies]
bindgen = { workspace = true, features = ["runtime"] }
cc = { workspace = true }
cmake = { workspace = true }

[lints]
workspace = true
